# dunecity

./: .cursorrules  .gitignore  AI_BOTS_GUIDE.md  AUTHORS  BUILD.md  CLAUDE.md  CMakeLists.txt  ChangeLog  DUNE-LEGACY-README  FEATURES.md  INSTALLER_NOTES.md  Makefile.am  PLAY-NOW-INSTRUCTIONS.md  README.md  ToDo.txt  WINDOWS_QUICKSTART.md  analysis.md  configure.ac  dunecity.6  dunecity.desktop  vcpkg.json  verify-install.bat
.analysis/: ios-port-plan.md
analysis/: analysis-2026-03-24.md  architecture-comparison.md  cxx-analysis-2026-03-24.md  cxx-analysis-2026-03-25.md  cxx-analysis-2026-03-26.md  cxx-analysis-2026-03-27.md  cxx-analysis-2026-03-28.md  cxx-analysis-2026-03-29.md  delivery-summary.md  dunelegacy-architecture.md  pathfinding_log_review.md  pathfinding_scaling.md  simcity-architecture.md
build.bad/: CMakeCache.txt
build0/: CMakeCache.txt  DartConfiguration.tcl
build2/: CMakeCache.txt  DartConfiguration.tcl
build_phase4/: CMakeCache.txt  DartConfiguration.tcl
buildtests/: CMakeCache.txt
config/: Dune City.ini  Dune Legacy.ini  ObjectData.ini.default  ObjectData.leg  QuantBot Config.ini.default  README.md
data/: ANEU.VOC  HNEU.VOC  ONEU.VOC  Tornie.PAK
docs/: guide.html  index.html  style.css
include/: AStarSearch.h  Bullet.h  CityScore.h  Colors.h  Command.h  CrashHandler.h  CursorManager.h  DataTypes.h  Definitions.h  Explosion.h  Game.h  GameInitSettings.h  GameInterface.h  House.h  Map.h  ObjectBase.h  ObjectData.h  RadarView.h  RadarViewBase.h  SpatialGrid.h  SpatialGridHandle.h  Tile.h  config.h  config.h.in  data.h  globals.h  main.h  sand.h
release_notes/: RELEASE_NOTES.md
scripts/: build.sh  bump-version.sh  make-tornie-pak.py
sourceforge_website/: contact.html  contributing.html  downloads.html  dune-legacy-0.95-released.html  dune-legacy-0.96-released.html  dune-legacy-0.96.1-released.html  dune-legacy-0.96.2-released.html  dune-legacy-0.96.3-released.html  dune-legacy-0.96.4-released.html  dune-legacy-0.97.00-released.html  dune-legacy-0.97.03-released.html  dune-legacy-0.97.04-released.html  dune-legacy-0.98.1-released.html  dune-legacy-0.98.4-released.html  dune-legacy-0.98.6-released.html  dune-legacy-0.98.6.2-released.html  dune-legacy-0.98.6.3-released.html  dune-legacy-0.98.6.4-released.html  dune-legacy-0.98.6.6-released.html  dune-legacy-0.98.7.1-released.html  dune-legacy-0.99-released.html  faq.html  feed.xml  forum.html  gallery.html  hd-graphics-for-dune-legacy.html  index.html  manual.html  maps.html  new-wiki.html  news.html  pakfilelist.html  patch-for-mac-os-x-10.10.html  style.css
src/: AStarSearch.cpp  Bullet.cpp  CMakeLists.txt  CityScore.cpp  Command.cpp  CrashHandler.cpp  CursorManager.cpp  Game.cpp  GameInitSettings.cpp  GameInterface.cpp  House.cpp  Makefile.am  Map.cpp  ObjectBase.cpp  ObjectData.cpp  ObjectManager.cpp  RadarView.cpp  SoundPlayer.cpp  SpatialGrid.cpp  Tile.cpp  dunelegacy.rc  globals.cpp  main.cpp  mmath.cpp  sand.cpp
src/CutScenes/: Finale.cpp  Intro.cpp
src/FileClasses/: FileManager.cpp  GFXManager.cpp  PictureFactory.cpp  SFXManager.cpp
src/FileClasses/adl/: woodyopl.cpp
src/GUI/dune/: BuilderList.cpp  CityBudgetWindow.cpp  DisasterNotification.cpp  GameOptionsWindow.cpp  InGameSettingsMenu.cpp  LoadSaveWindow.cpp  WaitingForOtherPlayers.cpp
src/INIMap/: INIMapEditorLoader.cpp  INIMapLoader.cpp  INIMapPreviewCreator.cpp
src/MapEditor/: ChoamWindow.cpp  MapEditor.cpp  MapEditorInterface.cpp  MapEditorOperation.cpp  MapEditorRadarView.cpp  NewMapWindow.cpp  ReinforcementsWindow.cpp
src/Menu/: BriefingMenu.cpp  CustomGameMenu.cpp  CustomGamePlayers.cpp  HouseChoiceMenu.cpp  MainMenu.cpp  MentatMenu.cpp  MenuBase.cpp  ModEditorMenu.cpp  ModMenu.cpp  MultiPlayerMenu.cpp  OptionsMenu.cpp  SinglePlayerMenu.cpp  SinglePlayerSkirmishMenu.cpp
src/Network/: ENetHttp.cpp  LANGameFinderAndAnnouncer.cpp  MetaServerClient.cpp  NetworkManager.cpp  StunClient.cpp  UPnPManager.cpp  VersionChecker.cpp
src/audio/: sounds.cpp  sounds.h
src/dunecity/: CityBudget.cpp  CityEffectsRuntime.cpp  CityEvaluation.cpp  CityScanner.cpp  CitySimulation.cpp  PowerGrid.cpp  TrafficSimulation.cpp  ZoneSimulation.cpp
src/enet/: unix.c
src/misc/: DiscordManager.cpp  FileSystem.cpp  draw_util.cpp  fnkdat.cpp  sound_util.cpp
src/mod/: ModManager.cpp
src/players/: AIPlayer.cpp  CampaignAIPlayer.cpp  PlayerFactory.cpp  QuantBot.cpp  QuantBotConfig.cpp  SmartBot.cpp
src/structures/: AdvancedWindTrap.cpp  BuilderBase.cpp  ConstructionYard.cpp  Palace.cpp  Refinery.cpp  RepairYard.cpp  RocketTurret.cpp  StarPort.cpp  StructureBase.cpp  TurretBase.cpp  WindTrap.cpp  ZoneStructure.cpp
src/units/: Carryall.cpp  FlameTank.cpp  GroundUnit.cpp  Harvester.cpp  InfantryBase.cpp  Ornithopter.cpp  Saboteur.cpp  SandWorm.cpp  TrackedUnit.cpp  UnitBase.cpp
tasks/: phase1-rebrand-and-first-ui.md  (+9 more)
tests/: CMakeLists.txt  CMakeLists.txt.bak  README.md  TextManager_stub.cpp  globals_test_stub.cpp  testmain.cpp
tests/BudgetAllocationTestCase/: BudgetAllocationTestCase.cpp
tests/CityBudgetIntegrationTestCase/: CityBudgetIntegrationTestCase.cpp
tests/CityBuildLogicTestCase/: CityBuildLogicTestCase.cpp
tests/CityEffectsTestCase/: CityEffectsTestCase.cpp
tests/CityRoadTestCase/: CityRoadTestCase.cpp
tests/CityScoreTestCase/: CityScoreTestCase.cpp
tests/CityStructuresTestCase/: CityStructuresTestCase.cpp
tests/ConstructionYardResolverTestCase/: ConstructionYardResolverTestCase.cpp
tests/FactionCityBonusTestCase/: FactionCityBonusTestCase.cpp
tests/MilestoneTestCase/: MilestoneTestCase.cpp
tests/NetworkManagerTestCase/: NetworkManagerTestCase.cpp
tests/NeutralHouseTestCase/: NeutralHouseTestCase.cpp
tests/OverlayLegendTestCase/: OverlayLegendTestCase.cpp
tests/PathBudgetTestCase/: PathBudgetTestCase.cpp
tests/PoliceStationTestCase/: PoliceStationTestCase.cpp
tests/RoadNetworkGrowthTestCase/: RoadNetworkGrowthTestCase.cpp
tests/RoadPlacementTestCase/: RoadPlacementTestCase.cpp
tests/ValueModelTestCase/: ValueModelTestCase.cpp
tests/ZoneStructureTestCase/: ZoneStructureTestCase.cpp
(+174 files in other folders)
